[gd_scene load_steps=2 format=2]

[ext_resource path="res://Objects/Actors/Player/Rose/AttackObjects/RangedAttack.gd" type="Script" id=1]

[node name="XAttack" type="KinematicBody2D"]
rotation = 1.5708
collision_layer = 4
collision_mask = 8
script = ExtResource( 1 )
wind = 0.5
attack = 0.7
speedx = 50.0
speedy = -500.0
knockback = Vector2( 100, 400 )
movey = false

[node name="AttackTimer" type="Timer" parent="."]
one_shot = true

[node name="collider" type="CollisionPolygon2D" parent="."]
position = Vector2( 1.43385, -26.8864 )
polygon = PoolVector2Array( -18.8505, 15.701, -20.2846, -16.2043, 22.7338, -0.431067 )
disabled = true

[node name="WindupTimer" type="Timer" parent="."]
one_shot = true

[node name="Area2D" type="Area2D" parent="."]

[node name="collider2" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( 1.43385, -26.8864 )
polygon = PoolVector2Array( -18.8505, 15.701, -20.2846, -16.2043, 22.7338, -0.431067 )
disabled = true

[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
[connection signal="timeout" from="WindupTimer" to="." method="_on_WindupTimer_timeout"]
